--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,12 +7,8 @@ body {
   background-image: url(/img/confectionary.png);
 }
 
-.logo {
-  width: 60%;
-}
-
-input {
-  padding: 1%;
-  margin: 1% auto;
-  display: block;
+header {
+  width: 80%;
+  margin: auto;
+  text-align: center;
 }
