--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,14 +3,13 @@ html
   head
     title= title
     link(rel='stylesheet', href='/css/main.css')
-    link(rel='stylesheet', href='/lib/bootstrap.min.css')
-  body
+    script(src='socket.io/socket.io.js')
+    script(src='lib/angular.min.js')
+    script(src='lib/angular-route.min.js')
+  body(ng-app='app', ng-controller='ctrl')
     .page
       header
-        .row
-          .col-md-2
-          .col-md-2
-            h1= title
+        h1= title
 
       block content
 
