--- a/views/index.jade
+++ b/views/index.jade
@@ -1,12 +1,29 @@
-extends layout
+doctype html
+html
+  head
 
-block content
-  link(rel='stylesheet', href='/css/index.css')
-  form
-    label(for="name") Name
-    input(type="text" name="name" id="name" ng-model="name")
-    input(type="submit" value="Buzz" ng-show="name" ng-click="buzz()")
-  ol
-    li(ng-repeat="buzz in buzzes") {{ buzz }}
+    // title variable is provided as the "context" argument to res.render(<template name>, context)
+    title= title
 
-  script(src="js/index.js")
+    // One stylesheet to rule them all
+    link(rel='stylesheet', href='css/main.css')
+
+    // Defines io global
+    script(src='socket.io/socket.io.js')
+
+    // Defines angular global
+    script(src='lib/angular.min.js')
+
+  body(ng-app='app')
+    .page
+      header
+        h1= title
+      main(ng-controller='ctrl')
+        label(for="name") Name
+        input(type="text" name="name" id="name" ng-model="name")
+        input(type="submit" value="Buzz" ng-show="name" ng-click="buzz()")
+        input(type="submit" value="Reset" ng-click="reset()")
+        ol
+          li(ng-repeat="buzz in buzzes") {{ buzz }}
+
+  script(src="js/app.js")
